<resources>
    <string name="app_name">Мои заметки</string>
    <string name="Personal">Личное</string>
    <string name="Work">Работа</string>
    <string name="Name_folder">Название раздела</string>
    <string name="add">Добавить</string>
    <string name="name_title">Название заметки</string>
    <string name="hint_text_note">Текст заметки</string>
    <string name="Date">Дата</string>
    <string name="Name_folder_note">Название раздела - Заметка</string>
    <string name="name_title_hint">Введите название заметки:</string>
    <string name="hint_notes_text">Введите текст заметки:</string>
    <string name="no_notes_text">Необходимо добавить текст.</string>
    <string name="Pin">Закрепить/Открепить</string>
    <string name="Delete">Удалить</string>
    <string name="pinned">Закреплено</string>
    <string name="unpinned">Откреплено</string>
    <string name="delete">Заметка удалена</string>
</resources>