<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/notes_block"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/background_notes"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:ellipsize="marquee"
                android:fontFamily="@font/nunito_bold"
                android:marqueeRepeatLimit="marquee_forever"
                android:padding="8dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/name_title"
                android:textColor="@color/color_title_name"
                android:textSize="16sp"
                 />

            <ImageView
                android:id="@+id/imageView_pin"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_pin"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:hint="@string/hint_text_note"
            android:maxLines="30"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_date_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/nunito"
            android:hint="@string/Date"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="30"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/color_date"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>
</androidx.cardview.widget.CardView>